--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,12 @@ dependencies {
     compile 'com.skyfishjy.ripplebackground:library:1.0.1'
     compile 'com.github.paroca72:sc-widgets:2.1.2'
     compile 'com.numetriclabz.numandroidcharts:numandroidcharts:1.0.12'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
+
+
 
 allprojects {
     repositories {
