-> improved the settings screen layout -> added fields for setting parameters for frequecny response in the settings menu -> added freq response option to navigation drawer and cleaned up navigation drawer layout -> added option to export image of graph in DCvoltageActivity to gallery -> small layout improvements to start screen -> started work on implementing the freq response activity_connection_screen_drawer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,8 @@
             android:label="@string/title_activity_settings" />
         <activity
             android:name=".VoltageOscilloscopeActivity"
-            android:screenOrientation="landscape"/>
-
+            android:screenOrientation="landscape" />
+        <activity android:name=".FrequencyResponseActivity"></activity>
     </application>
 
 </manifest>
