--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".BaseApplication"
+        android:name=".utilityClasses.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,17 +23,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ConnectionScreenActivity"
+            android:name=".activities.ConnectionScreenActivity"
             android:label="@string/title_activity_connection_screen"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".DCvoltageActivity" />
+        <activity android:name=".activities.measurementActivities.DCvoltageActivity" />
         <activity
-            android:name=".SettingsActivity"
+            android:name=".activities.SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity
-            android:name=".VoltageOscilloscopeActivity"
+            android:name=".activities.measurementActivities.VoltageOscilloscopeActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".FrequencyResponseActivity"></activity>
+        <activity android:name=".activities.measurementActivities.FrequencyResponseActivity"></activity>
     </application>
 
 </manifest>
