customized the application side drawer and added the Signal generator item. Finished layout for the Signal Generator activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
             android:name=".activities.measurementActivities.VoltageOscilloscopeActivity"
             android:screenOrientation="landscape" />
         <activity android:name=".activities.measurementActivities.FrequencyResponseActivity" />
-        <activity android:name=".activities.measurementActivities.DCcurrentActivity"></activity>
+        <activity android:name=".activities.measurementActivities.DCcurrentActivity" />
+        <activity android:name=".activities.measurementActivities.SignalGeneratorActivity"></activity>
     </application>
 
 </manifest>
