--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".utilityClasses.BaseApplication"
@@ -38,8 +38,11 @@
         <activity android:name=".activities.measurementActivities.Level1.DCcurrentActivity" />
         <activity android:name=".activities.measurementActivities.Level3.SignalGeneratorActivity" />
         <activity android:name=".activities.measurementActivities.Level1.ResistanceActivity" />
-        <activity android:name=".activities.measurementActivities.Level2.CurrentOscilloscopeActivity"
-                android:screenOrientation="landscape"></activity>
+        <activity
+            android:name=".activities.measurementActivities.Level2.CurrentOscilloscopeActivity"
+            android:screenOrientation="landscape" />
+        <activity android:name=".activities.measurementActivities.Level3.LightIntensityActivity" />
+        <activity android:name=".activities.measurementActivities.Level3.CapacitanceActivity"></activity>
     </application>
 
 </manifest>
